First round with wire-protoc-compatible module