@@ -2,12 +2,31 @@ import com.vanniktech.maven.publish.GradlePlugin
 import com.vanniktech.maven.publish.JavadocJar.Dokka
 import com.vanniktech.maven.publish.MavenPublishBaseExtension
 
+//
+// // This module is included in two projects:
+// // - In the root project where it's released as one of our artifacts
+// // - In build-logic project where we can use it for the test-schema and samples.
+// //
+// // We only want to publish when it's being built in the root project.
+// if (rootProject.name == 'wire') {
+//   apply plugin: 'com.vanniktech.maven.publish'
+//   apply plugin: 'org.jetbrains.dokka'
+// }
+
+
 plugins {
-  id("com.gradle.plugin-publish") version "0.18.0"
   kotlin("jvm")
+  id("com.github.gmazzo.buildconfig")
   id("java-gradle-plugin")
-  id("org.jetbrains.dokka")
-  id("com.vanniktech.maven.publish.base")
+  id("com.gradle.plugin-publish").version("0.18.0").apply(false)
+  id("org.jetbrains.dokka").apply(false)
+  id("com.vanniktech.maven.publish.base").apply(false)
+}
+
+if (project.rootProject.name == "wire") {
+  apply(plugin = "com.gradle.plugin-publish")
+  apply(plugin = "org.jetbrains.dokka")
+  apply(plugin = "com.vanniktech.maven.publish.base")
 }
 
 gradlePlugin {
@@ -21,18 +40,18 @@ gradlePlugin {
   }
 }
 
-pluginBundle {
-  website = "https://github.com/square/wire"
-  vcsUrl = "https://github.com/square/wire"
-  description = "generate code from .proto files"
-
-  (plugins) {
-    "wire" {
-      displayName = "Wire"
-      tags = listOf("wire", "protobuf")
-    }
-  }
-}
+  // pluginBundle {
+  //   website = "https://github.com/square/wire"
+  //   vcsUrl = "https://github.com/square/wire"
+  //   description = "generate code from .proto files"
+  //
+  //   (plugins) {
+  //     "wire" {
+  //       displayName = "Wire"
+  //       tags = listOf("wire", "protobuf")
+  //     }
+  //   }
+  // }
 
 dependencies {
   implementation(projects.wireCompiler)
@@ -48,20 +67,13 @@ dependencies {
   testImplementation(projects.wireTestUtils)
 }
 
-val versionWriterTaskProvider = tasks.register("writeVersion", VersionWriterTask::class)
-
-sourceSets {
-  val main by getting {
-    java.srcDir(versionWriterTaskProvider)
-  }
-}
-
 val installProtoJars by tasks.creating(Copy::class) {
   into("${rootDir.path}/build/localMaven")
   from("${projectDir.path}/src/test/libs")
 }
 
 tasks.withType<Test>().configureEach {
+  jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
   dependsOn(installProtoJars)
   dependsOn(":wire-runtime:installLocally")
 }
@@ -72,8 +84,20 @@ val test by tasks.getting(Test::class) {
   systemProperty("knative", System.getProperty("knative"))
 }
 
-configure<MavenPublishBaseExtension> {
-  configure(
-    GradlePlugin(javadocJar = Dokka("dokkaGfm"), sourcesJar = true)
-  )
+if (project.rootProject.name == "wire") {
+  configure<MavenPublishBaseExtension> {
+    configure(
+      GradlePlugin(javadocJar = Dokka("dokkaGfm"), sourcesJar = true)
+    )
+  }
+}
+
+buildConfig {
+  useKotlinOutput {
+    internalVisibility = true
+    topLevelConstants = true
+  }
+
+  packageName("com.squareup.wire")
+  buildConfigField("String", "VERSION", "\"${project.version}\"")
 }
